--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@
 .container{
     margin-bottom: 50px;
 }
+.container-1{
+    margin-bottom: 50px;
+    margin-top: 80px;
+    float: right;
+    
+}
+
+
 .orange-bg{
     background-color: #fceae8;
     border-radius: 10px;
@@ -38,11 +46,70 @@
     padding: 20px 20px;
 }
 .buy{
+    font-weight: 500;
+    font-size: 20px;
     background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
     color: white;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
     cursor: pointer;
-
 }
+#watch{
+    font-family: 'Roboto', sans-serif;
+}
+
+.cat-1, .cat-2, .cat-3{
+    padding: 10px 30px;
+    border-radius: 15px;
+}
+.cat-1{
+    background-color: orange;
+}
+.cat-2{
+    background-color: orchid;
+}
+.cat-3{
+    background-color: blue;
+}
+.categories h1{
+    color: white;
+}
+.categories img{
+    width: 100px;
+}
+
+.max{
+    font-size: 30px;
+}
+
+.price{
+    font-size: 30px;
+}
+
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px grey;
+}
+
+.card-title{
+    font-size: 25px;
+}
+
+.card1{
+    height: 50px;
+    width: 100px;
+    border: black;
+}
+
+.no{
+    padding-left: 100px;
+}
+.container-2{
+    float: left;
+}
+
+.have{
+    padding-right: 20px;
+}
+
