--- a/style.css
+++ b/style.css
@@ -96,20 +96,21 @@
     font-size: 25px;
 }
 
-.card1{
-    height: 50px;
-    width: 100px;
-    border: black;
+
+.er{
+    display: flex;
+    width: 320px;
 }
 
-.no{
-    padding-left: 100px;
-}
-.container-2{
-    float: left;
+#subscribe{
+    height: 300px;
 }
 
-.have{
-    padding-right: 20px;
+.gy{
+    font-size: 15px;
+    padding: 6px 20px;
 }
 
+footer{
+    text-align: center;
+}
